<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TestAfterAd">

    <TextView
        android:id="@+id/textViewQuestion"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:maxLines="2"
        android:padding="4dp"
        android:text="@string/question"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="24sp"
        tools:ignore="RtlSymmetry" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textViewQuestion"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:id="@+id/textViewOption1"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/option1"
            android:textColor="@color/black"
            android:textSize="24sp"
            tools:ignore="RtlSymmetry" />


        <TextView
            android:id="@+id/textViewOption2"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:padding="10dp"
            android:text="@string/option2"
            android:textColor="@color/black"
            android:textSize="24sp"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:id="@+id/textViewOption3"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:padding="10dp"
            android:text="@string/Option3"
            android:textColor="@color/black"
            android:textSize="24sp"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:id="@+id/textViewOption4"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:padding="10dp"
            android:text="@string/option4"
            android:textColor="@color/black"
            android:textSize="24sp"
            tools:ignore="RtlSymmetry" />
    </LinearLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/linearLayout"
        android:layout_margin="10dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextAnswer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:hint="@string/enter_your_answer_as_1_2_3_or_4"
            android:textColor="@color/black"
            android:textColorHint="@color/black" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSubmitAnswer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="100dp"
        android:text="@string/submit"
        android:textAllCaps="false" />

    <ProgressBar
        android:id="@+id/pbTest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        />

</RelativeLayout>