<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Profile">


    <TextView
        android:id="@+id/tvWalletTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="40dp"
        android:text="@string/wallet"
        android:textColor="@color/black"
        android:textSize="26sp" />

    <TextView
        android:id="@+id/tvWalletCoins"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="40dp"
        android:layout_toEndOf="@id/tvWalletTitle"
        android:text="@string/amount"
        android:textColor="@color/black"
        android:textSize="26sp"
        tools:ignore="RelativeOverlap" />

    <TextView
        android:id="@+id/emoji"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="40dp"
        android:text="@string/coins"
        android:textColor="@color/black"
        android:textSize="26sp"
        tools:ignore="RelativeOverlap" />


</RelativeLayout>





