<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Publish">


    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/outlinedTextFieldTitle"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="40dp"
                android:layout_marginRight="20dp"
                android:hint="@string/enter_the_title_of_ad">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="1" />

            </com.google.android.material.textfield.TextInputLayout>


            <ImageView
                android:id="@+id/ivUpload"
                android:layout_width="300dp"
                android:layout_height="300dp"
                android:layout_below="@id/outlinedTextFieldTitle"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:src="@drawable/ic_baseline_image_24"
                tools:ignore="ContentDescription" />

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginTop="10dp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/outlinedTextFieldQuestion"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/ivUpload"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:hint="@string/question">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etQuestion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="1" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/outlinedTextFieldOption1"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="280dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/outlinedTextFieldQuestion"
                android:layout_alignParentStart="true"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:hint="@string/option_1">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etOption1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="1" />

            </com.google.android.material.textfield.TextInputLayout>

            <CheckBox
                android:id="@+id/checkbox1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/outlinedTextFieldQuestion"
                android:layout_marginTop="18dp"
                android:layout_marginEnd="20dp"
                android:layout_toEndOf="@+id/outlinedTextFieldOption1"
                android:scaleX="2.0"
                android:scaleY="2.0" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/outlinedTextFieldOption2"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="280dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/outlinedTextFieldOption1"
                android:layout_alignParentStart="true"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:hint="@string/option_2">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etOption2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="1" />

            </com.google.android.material.textfield.TextInputLayout>

            <CheckBox
                android:id="@+id/checkbox2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/checkbox1"
                android:layout_marginTop="22dp"
                android:layout_marginEnd="20dp"
                android:layout_toEndOf="@+id/outlinedTextFieldOption1"
                android:scaleX="2.0"
                android:scaleY="2.0" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/outlinedTextFieldOption3"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="280dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/outlinedTextFieldOption2"
                android:layout_alignParentStart="true"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:hint="@string/option_3">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etOption3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="1" />

            </com.google.android.material.textfield.TextInputLayout>

            <CheckBox
                android:id="@+id/checkbox3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/checkbox2"
                android:layout_marginTop="22dp"
                android:layout_marginEnd="20dp"
                android:layout_toEndOf="@+id/outlinedTextFieldOption1"
                android:scaleX="2.0"
                android:scaleY="2.0" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/outlinedTextFieldOption4"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="280dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/outlinedTextFieldOption3"
                android:layout_alignParentStart="true"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:hint="@string/option_4">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etOption4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="1" />

            </com.google.android.material.textfield.TextInputLayout>

            <CheckBox
                android:id="@+id/checkbox4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/checkbox3"
                android:layout_marginTop="22dp"
                android:layout_marginEnd="20dp"
                android:layout_toEndOf="@+id/outlinedTextFieldOption1"
                android:scaleX="2.0"
                android:scaleY="2.0" />

            <Button
                android:id="@+id/btnUpload"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/outlinedTextFieldOption4"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="100dp"
                android:text="@string/upload"
                android:textAllCaps="false" />

        </RelativeLayout>
    </androidx.core.widget.NestedScrollView>


</RelativeLayout>